out_5_utf8.txt
javac : src\MainApp.java:23: 
error: cannot find symbol
At line:1 char:1
+ javac -d "bin" 
src\MainApp.java 
src\Restock.java 
src\DBConnection.jav ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (src\Mai  
  nApp.jav...not find symb   
 ol:String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
    private User currentUser;
            ^
  symbol:   class User
  location: class MainApp
src\MainApp.java:25: error: 
cannot find symbol
    private final UserDAO 
userDAO = new UserDAO();
                  ^
  symbol:   class UserDAO
  location: class MainApp
src\MainApp.java:26: error: 
cannot find symbol
    private final 
PurchaseDAO purchaseDAO = 
new PurchaseDAO();
                  ^
  symbol:   class PurchaseDAO
  location: class MainApp
src\MainApp.java:27: error: 
cannot find symbol
    private final GameDAO 
gameDAO = new GameDAO();
                  ^
  symbol:   class GameDAO
  location: class MainApp
src\MainApp.java:28: error: 
cannot find symbol
    private final 
PurchaseService 
purchaseService = new 
PurchaseService();
                  ^
  symbol:   class 
PurchaseService
  location: class MainApp
src\MainApp.java:30: error: 
cannot find symbol
    private final 
ObservableList<Game> games = 
FXCollections.observableArray
List();
                             
    ^
  symbol:   class Game
  location: class MainApp
src\MainApp.java:31: error: 
cannot find symbol
    private final List<Game> 
cart = new ArrayList<>();
                       ^
  symbol:   class Game
  location: class MainApp
src\MainApp.java:32: error: 
cannot find symbol
    private List<Purchase> 
ownedGames = new 
ArrayList<>();
                 ^
  symbol:   class Purchase
  location: class MainApp
src\MainApp.java:25: error: 
cannot find symbol
    private final UserDAO 
userDAO = new UserDAO();
                             
           ^
  symbol:   class UserDAO
  location: class MainApp
src\MainApp.java:26: error: 
cannot find symbol
    private final 
PurchaseDAO purchaseDAO = 
new PurchaseDAO();
                             
                   ^
  symbol:   class PurchaseDAO
  location: class MainApp
src\MainApp.java:27: error: 
cannot find symbol
    private final GameDAO 
gameDAO = new GameDAO();
                             
           ^
  symbol:   class GameDAO
  location: class MainApp
src\MainApp.java:28: error: 
cannot find symbol
    private final 
PurchaseService 
purchaseService = new 
PurchaseService();
                             
                           ^
  symbol:   class 
PurchaseService
  location: class MainApp
src\MainApp.java:86: error: 
cannot find symbol
                User u = user
DAO.findByUsername(username);
                ^
  symbol:   class User
  location: class MainApp
src\MainApp.java:123: error: 
cannot find symbol
        for (Purchase p : 
ownedGames) {
             ^
  symbol:   class Purchase
  location: class MainApp
src\MainApp.java:236: error: 
cannot find symbol
                        new U
serDAO().updateWalletDelta(c,
 currentUser.getUserId(), 
amt);
                            ^
  symbol:   class UserDAO
  location: class MainApp
src\MainApp.java:262: error: 
cannot find symbol
        for (Game g : cart) 
totalCost += g.getPrice();
             ^
  symbol:   class Game
  location: class MainApp
src\MainApp.java:271: error: 
cannot find symbol
            for (Game g : 
cart) {
                 ^
  symbol:   class Game
  location: class MainApp
src\MainApp.java:345: error: 
cannot find symbol
            List<Game> list 
= gameDAO.listAll();
                 ^
  symbol:   class Game
  location: class MainApp
src\MainApp.java:354: error: 
cannot find symbol
                    for 
(Game g : list) {
                         ^
  symbol:   class Game
  location: class MainApp
19 errors
